--- a/Projects_Examples/Проект_8/ContactBook/Views/MainWindow.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/MainWindow.xaml
@@ -74,7 +74,7 @@
         </Grid>
 
         <Grid DockPanel.Dock="Bottom">
-            
+            <ContentControl Content="{Binding CurrentView}" />
         </Grid>
         
     </DockPanel>
