--- a/Projects_Examples/Проект_8/ContactBook/Views/BookView.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/BookView.xaml
@@ -5,24 +5,32 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ContactBook.Views"
              xmlns:vm="clr-namespace:ContactBook.ViewModels"
+             xmlns:v="clr-namespace:ContactBook.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" 
              d:DesignWidth="800"
              Background="AliceBlue">
     
-    <UserControl.DataContext>
+    <!--<UserControl.DataContext>
         <vm:BookViewModel/>
-    </UserControl.DataContext>
+    </UserControl.DataContext>-->
 
     <Grid>
-        <StackPanel>
-            <TextBlock Text="{Binding Title}"/>
-            <TextBlock Text="{Binding Title}"/>
-            <TextBlock Text="{Binding Title}"/>
-            <TextBlock Text="{Binding Title}"/>
-            <TextBlock Text="{Binding Title}"/>
-            <TextBlock Text="{Binding Title}"/>
-            <TextBlock Text="{Binding Title}"/>
-        </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="220"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <ListView 
+                ItemsSource="{Binding ContactsViewModel.Contacts}"
+                SelectedItem="{Binding ContactsViewModel.SelectedContact}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <v:ContactItemView/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </Grid>
 </UserControl>
