Добавление команд для отображения контактов

--- a/Projects_Examples/Проект_8/ContactBook/Views/BookView.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/BookView.xaml
@@ -32,5 +32,15 @@
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
+
+        <Grid Grid.Column="1">
+            <ScrollViewer>
+                <!--<ContentControl>
+                    <ContentControl.Content>
+                        <v:DetailsView DataContext="{Binding ContactsViewModel}"/>
+                    </ContentControl.Content>
+                </ContentControl>-->
+            </ScrollViewer>
+        </Grid>
     </Grid>
 </UserControl>
