--- a/Projects_Examples/Проект_8/ContactBook/Views/BookView.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/BookView.xaml
@@ -35,11 +35,11 @@
 
         <Grid Grid.Column="1">
             <ScrollViewer>
-                <!--<ContentControl>
+                <ContentControl>
                     <ContentControl.Content>
                         <v:DetailsView DataContext="{Binding ContactsViewModel}"/>
                     </ContentControl.Content>
-                </ContentControl>-->
+                </ContentControl>
             </ScrollViewer>
         </Grid>
     </Grid>
