Верстка оторбражения карточки контактов

--- a/Projects_Examples/Проект_8/ContactBook/App.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/App.xaml
@@ -16,6 +16,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
+            <!--Изображение контакта по умолчанию-->
+            <BitmapImage x:Key="DefaultContactImage" UriSource="/Resources/defcontact.png"/>
+
             <!--Шаблоны данных для взаимосвязи View с ViewModel и для отображения данных-->
             <DataTemplate DataType="{x:Type vm:BookViewModel}">
                 <v:BookView/>
@@ -25,8 +28,68 @@
                 <v:ContactItemView/>
             </DataTemplate>
 
-            <!--Изображение контакта по умолчанию-->
-            <BitmapImage x:Key="DefaultContactImage" UriSource="/Resources/defcontact.png"/>
+            <Style x:Key="EditBox" TargetType="{x:Type TextBoxBase}">
+                <Setter Property="SnapsToDevicePixels" Value="True"/>
+                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="MinWidth" Value="120"/>
+                <Setter Property="MinHeight" Value="20"/>
+                <Setter Property="AllowDrop" Value="true"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <!-- What are control templates? Visit: https://dzone.com/articles/control-templates-wpf -->
+                        <ControlTemplate TargetType="{x:Type TextBoxBase}">
+                            <Border Name="Border" CornerRadius="3" Padding="2" 
+                                Background="White" 
+                                BorderBrush="#FF4B6584"
+                                BorderThickness="1" >
+
+                                <!-- What is this? Visit: http://paulstovell.com/blog/wpf-part-names -->
+                                <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter TargetName="Border" Property="Background" Value="#FFa5b1c2"/>
+                                    <Setter TargetName="Border" Property="BorderBrush" Value="#FF69717C"/>
+                                    <Setter Property="Foreground" Value="#FFd1d8e0"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="favoriteCheckbox" TargetType="{x:Type CheckBox}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type CheckBox}">
+                            <StackPanel Orientation="Horizontal">
+                                <Image x:Name="checkboxImage" Source="/Resources/uncheckedStar.png" Width="32"/>
+                                <ContentPresenter/>
+                            </StackPanel>
+
+                            <ControlTemplate.Triggers>
+
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter TargetName="checkboxImage" Property="Source" Value="/Resources/checkedStar.png"/>
+                                </Trigger>
+
+                                <MultiTrigger>
+                                    <MultiTrigger.Conditions>
+                                        <Condition Property="IsMouseOver" Value="True"/>
+                                        <Condition Property="IsChecked" Value="False"/>
+                                    </MultiTrigger.Conditions>
+                                    <Setter TargetName="checkboxImage" Property="Source" Value="/Resources/hoverStar.png"/>
+                                </MultiTrigger>
+
+                            </ControlTemplate.Triggers>
+
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
 
         </ResourceDictionary>
     </Application.Resources>
