--- a/Projects_Examples/Проект_8/ContactBook/Views/DetailsView.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/DetailsView.xaml
@@ -1,11 +1,13 @@
 ﻿<UserControl x:Class="ContactBook.Views.DetailsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
              xmlns:local="clr-namespace:ContactBook.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             xmlns:mi="clr-namespace:Material.Icons.WPF;assembly=Material.Icons.WPF"
+             
+             d:DesignHeight="800" 
+             d:DesignWidth="800"
              Background="AliceBlue">
 
     <Grid>
@@ -19,140 +21,146 @@
 
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Column="0" HorizontalAlignment="Left"
-                        Margin="5">
+            <StackPanel Grid.Column="0" HorizontalAlignment="Left" Margin="5">
                 <StackPanel Orientation="Horizontal">
                     <StackPanel HorizontalAlignment="Center">
-
-                        <TextBox Text="{Binding SelectedContact.Name, FallbackValue=NULL, Mode=TwoWay}"
-                                 
-                                 VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
-                                 Margin="5"/>
-
                         <Label Content="{Binding SelectedContact.Name,FallbackValue=NULL}"
                                HorizontalAlignment="Center"
                                FontSize="24"/>
+                        <TextBox Text="{Binding SelectedContact.Name, FallbackValue=NULL, Mode=TwoWay}"/>
                     </StackPanel>
-                    <CheckBox IsChecked="{Binding SelectedContact.IsFavorite}"
-                              Command="{Binding UpdateCommand}"/>
-                </StackPanel>
-                <Grid Height="125" Width="125">
-                    <Image Height="125" Width="125"
-                           Source="{Binding SelectedContact.ImagePath,
-                        FallbackValue={StaticResource DefaultContactImage},
-                        TargetNullValue={StaticResource DefaultContactImage}}"/>
 
-                    <Button 
-                            Command="{Binding BrowseImageCommand}"
-                            
-                            VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                            Foreground="Black" FontWeight="DemiBold">
-                        Browse
-                    </Button>
+                    <CheckBox Content="IsFavorite"></CheckBox>
+                </StackPanel>
+
+                <Grid Height="160" Width="130">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" SharedSizeGroup="SharedWidth"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel>
+                        <Image 
+                            Height="125" Width="135"
+                            Source="{Binding SelectedContact.ImagePath,
+                                     FallbackValue={StaticResource DefaultContactImage},
+                                     TargetNullValue={StaticResource DefaultContactImage}}"/>
+
+                        <Button 
+                            Grid.Column="2"
+                            VerticalAlignment="Bottom"
+                            HorizontalAlignment="Right"
+                            FontWeight="Bold" Background="#FF14735F" Cursor="Hand">
+
+                            <Button.Content>
+                                <StackPanel Orientation="Horizontal">
+                                    <mi:MaterialIcon Kind="InformationOutline"/>
+                                    <TextBlock VerticalAlignment="Center" 
+                                               HorizontalAlignment="Center" 
+                                               Margin="5,0" Text="Просмотр"/>
+                                </StackPanel>
+                            </Button.Content>
+
+                        </Button>
+                    </StackPanel>
                 </Grid>
             </StackPanel>
 
             <StackPanel Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal">
-                <Button 
-                        Command="{Binding SaveCommand}"
-                        Width="90" Height="40" Margin="5">
+                <Button Height="40" Margin="5" Background="#FF14735F" Cursor="Hand">
                     <Button.Content>
                         <StackPanel Orientation="Horizontal">
-                            
-                            <Label FontWeight="Bold">Save</Label>
+                            <mi:MaterialIcon Kind="ContentSave"/>
+                            <TextBlock Text="Сохранить" VerticalAlignment="Center" Margin="5,0,0,0"/>
                         </StackPanel>
                     </Button.Content>
                 </Button>
-            </StackPanel>
+                
+            </StackPanel>    
         </Grid>
 
-        <!-- Phone Details -->
+        <!--ТЕЛЕФОНЫ-->
         <StackPanel Grid.Row="1" Margin="5">
             <StackPanel>
-                <Border>
-                    <Label FontWeight="Bold" Foreground="#FFF5F7F9" Content="Phone"/>
+                <Border CornerRadius="6">
+                    <Border.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#FF778CA3" Offset="0.0" />
+                            <GradientStop Color="#FF7B8FA4" Offset="0.5" />
+                            <GradientStop Color="#FF8798AA" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Label FontWeight="Bold" Foreground="Black" FontSize="14" Content="Телефон:"/>
                 </Border>
 
                 <StackPanel>
-                    <!-- Home Numbers-->
-                    <Label  Content="Home"/>
-                    <Label 
-                   Content="{Binding SelectedContact.PhoneNumbers[0], FallbackValue=N/A}"
-                   />
+                    <Label FontWeight="Bold" FontSize="12" Padding="1" Foreground="#FF778CA3" Content="Домашний"/>
+                    <Label FontWeight="DemiBold" FontSize="14" Padding="1" Foreground="#FF131313"
+                           Content="{Binding SelectedContact.PhoneNumbers[0], FallbackValue=NULL}"/>
 
-                    <TextBox Text="{Binding SelectedContact.PhoneNumbers[0], FallbackValue=N/A, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      />
-
-
-                    <!-- Cell Numbers-->
-                    <Label  Content="Cell"/>
-                    <Label 
-                   Content="{Binding SelectedContact.PhoneNumbers[1], FallbackValue=N/A}"
-                   />
-                    <TextBox  Text="{Binding SelectedContact.PhoneNumbers[1], FallbackValue=N/A, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      />
+                    <Label FontWeight="Bold" FontSize="12" Padding="1" Foreground="#FF778CA3" Content="Рабочий"/>
+                    <Label FontWeight="DemiBold" FontSize="14" Padding="1" Foreground="#FF131313"
+                           Content="{Binding SelectedContact.PhoneNumbers[1], FallbackValue=NULL}"/>
+                    
                 </StackPanel>
             </StackPanel>
         </StackPanel>
 
-        <!-- Email Details -->
+        <!--ПОЧТА-->
         <StackPanel Grid.Row="2" Margin="5">
             <StackPanel>
-                <Border Style="{StaticResource DetailBorder}">
-                    <Label FontWeight="Bold" Foreground="#FFF5F7F9" Content="Emails"/>
+                <Border CornerRadius="6">
+                    <Border.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#FF778CA3" Offset="0.0" />
+                            <GradientStop Color="#FF7B8FA4" Offset="0.5" />
+                            <GradientStop Color="#FF8798AA" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Label FontWeight="Bold" Foreground="Black" FontSize="14" Content="Email:"/>
                 </Border>
 
                 <StackPanel>
-                    <!-- Personal Emails-->
-                    <Label Style="{StaticResource DetailLabel}" Content="Personal"/>
-                    <Label Style="{StaticResource ContentLabel}"
-                   Content="{Binding SelectedContact.Emails[0], FallbackValue=N/A}"
-                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-                    <TextBox Style="{StaticResource EditBox}"  Text="{Binding SelectedContact.Emails[0], FallbackValue=N/A, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
+                    <Label FontWeight="Bold" FontSize="12" Padding="1" Foreground="#FF778CA3" Content="Личный"/>
+                    <Label FontWeight="DemiBold" FontSize="14" Padding="1" Foreground="#FF131313"
+                          Content="{Binding SelectedContact.Emails[0], FallbackValue=NULL}"/>
 
-                    <!-- Work Emails-->
-                    <Label Style="{StaticResource DetailLabel}"  Content="Work"/>
-                    <Label Style="{StaticResource ContentLabel}"
-                   Content="{Binding SelectedContact.Emails[1], FallbackValue=N/A}"
-                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-                    <TextBox Style="{StaticResource EditBox}"  Text="{Binding SelectedContact.Emails[1], FallbackValue=N/A, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
+                    <Label FontWeight="Bold" FontSize="12" Padding="1" Foreground="#FF778CA3" Content="Рабочий"/>
+                    <Label FontWeight="DemiBold" FontSize="14" Padding="1" Foreground="#FF131313"
+                          Content="{Binding SelectedContact.Emails[1], FallbackValue=NULL}"/>
+
                 </StackPanel>
             </StackPanel>
         </StackPanel>
 
-        <!-- Location Details -->
+        <!--АДРЕСА-->
         <StackPanel Grid.Row="3" Margin="5">
             <StackPanel>
-                <Border Style="{StaticResource DetailBorder}">
-                    <Label FontWeight="Bold" Foreground="#FFF5F7F9" Content="Locations"/>
+                <Border CornerRadius="6">
+                    <Border.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#FF778CA3" Offset="0.0" />
+                            <GradientStop Color="#FF7B8FA4" Offset="0.5" />
+                            <GradientStop Color="#FF8798AA" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <Label FontWeight="Bold" Foreground="Black" FontSize="14" Content="Адреса:"/>
                 </Border>
 
                 <StackPanel>
-                    <!-- Home Locations-->
-                    <Label Style="{StaticResource DetailLabel}" Content="Home"/>
-                    <Label Style="{StaticResource ContentLabel}"
-                   Content="{Binding SelectedContact.Locations[0], FallbackValue=N/A}"
-                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-                    <TextBox Style="{StaticResource EditBox}"  Text="{Binding SelectedContact.Locations[0], FallbackValue=N/A, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
+                    <Label FontWeight="Bold" FontSize="12" Padding="1" Foreground="#FF778CA3" Content="Личный"/>
+                    <Label FontWeight="DemiBold" FontSize="14" Padding="1" Foreground="#FF131313"
+                          Content="{Binding SelectedContact.Locations[0], FallbackValue=NULL}"/>
 
-                    <!-- Work Locations-->
-                    <Label Style="{StaticResource DetailLabel}"  Content="Work"/>
-                    <Label Style="{StaticResource ContentLabel}"
-                   Content="{Binding SelectedContact.Locations[1], FallbackValue=N/A}"
-                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}"/>
-                    <TextBox Style="{StaticResource EditBox}"  Text="{Binding SelectedContact.Locations[1], FallbackValue=N/A, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                      Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}"/>
+                    <Label FontWeight="Bold" FontSize="12" Padding="1" Foreground="#FF778CA3" Content="Рабочий"/>
+                    <Label FontWeight="DemiBold" FontSize="14" Padding="1" Foreground="#FF131313"
+                          Content="{Binding SelectedContact.Locations[1], FallbackValue=NULL}"/>
+
                 </StackPanel>
             </StackPanel>
         </StackPanel>
+
     </Grid>
-
-
 </UserControl>
