--- a/Projects_Examples/Проект_8/ContactBook/Views/DetailsView.xaml
+++ b/Projects_Examples/Проект_8/ContactBook/Views/DetailsView.xaml
@@ -34,7 +34,9 @@
                         <TextBox Text="{Binding SelectedContact.Name, FallbackValue=NULL, Mode=TwoWay}"/>
                     </StackPanel>
 
-                    <CheckBox Content="IsFavorite"></CheckBox>
+                    <CheckBox Style="{StaticResource favoriteCheckbox}"
+                              IsChecked="{Binding SelectedContact.IsFavorite}"
+                              Command="{Binding UpdateCommand}"/>
                 </StackPanel>
 
                 <Grid Height="160" Width="130">
