--- a/Projects_Examples/Проект_9/PC_Viewer/Views/MainWindow.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Views/MainWindow.xaml
@@ -1,11 +1,20 @@
 ﻿<Window x:Class="PC_Viewer.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PC_Viewer.Views"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        
+        Title="MainWindow" 
+        Height="580" 
+        Width="930"
+        x:Name="DashboardWindow"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Background="Transparent"
+        AllowsTransparency="True">
+    
     <Grid>
         
     </Grid>
