--- a/Projects_Examples/Проект_9/PC_Viewer/App.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:PC_Viewer"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
          
     </Application.Resources>
 </Application>
