--- a/Projects_Examples/Проект_9/PC_Viewer/App.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/App.xaml
@@ -7,6 +7,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Styles.xaml"/>
+                <ResourceDictionary Source="Resources/BindingDataTemplates.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
          
