Добавление View и ViewModel для категории "документы", тест отображения

--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -13,4 +13,9 @@
         <v:HomeView/>
     </DataTemplate>
 
+    <!--Document Page-->
+    <DataTemplate DataType="{x:Type vm:DocumentViewModel}">
+        <v:DocumentView/>
+    </DataTemplate>
+    
 </ResourceDictionary>
