Добавление категории "загрузки"

--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -17,5 +17,10 @@
     <DataTemplate DataType="{x:Type vm:DocumentViewModel}">
         <v:DocumentView/>
     </DataTemplate>
-    
+
+    <!--Download Page-->
+    <DataTemplate DataType="{x:Type vm:DownloadViewModel}">
+        <v:DownloadView/>
+    </DataTemplate>
+
 </ResourceDictionary>
