Добавление категории "видео"

--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -23,4 +23,9 @@
         <v:DownloadView/>
     </DataTemplate>
 
+    <!--Movie Page-->
+    <DataTemplate DataType="{x:Type vm:MovieViewModel}">
+        <v:MovieView/>
+    </DataTemplate>
+
 </ResourceDictionary>
