Добавление категории "музыка"

--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -28,4 +28,9 @@
         <v:MovieView/>
     </DataTemplate>
 
+    <!--Music Page-->
+    <DataTemplate DataType="{x:Type vm:MusicViewModel}">
+        <v:MusicView/>
+    </DataTemplate>
+
 </ResourceDictionary>
