Добавление категории "ПК"

--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -33,4 +33,9 @@
         <v:MusicView/>
     </DataTemplate>
 
+    <!--PC Page-->
+    <DataTemplate DataType="{x:Type vm:PCViewModel}">
+        <v:PCView/>
+    </DataTemplate>
+
 </ResourceDictionary>
