Добавление категории "изображения"

--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -38,4 +38,9 @@
         <v:PCView/>
     </DataTemplate>
 
+    <!--Picture Page-->
+    <DataTemplate DataType="{x:Type vm:PictureViewModel}">
+        <v:PictureView/>
+    </DataTemplate>
+
 </ResourceDictionary>
