--- a/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Resources/BindingDataTemplates.xaml
@@ -43,4 +43,9 @@
         <v:PictureView/>
     </DataTemplate>
 
+    <!--Trash Page-->
+    <DataTemplate DataType="{x:Type vm:TrashViewModel}">
+        <v:TrashView/>
+    </DataTemplate>
+
 </ResourceDictionary>
