--- a/Projects_Examples/Проект_9/PC_Viewer/Views/TrashView.xaml
+++ b/Projects_Examples/Проект_9/PC_Viewer/Views/TrashView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="PC_Viewer.Views.PCView"
+﻿<UserControl x:Class="PC_Viewer.Views.TrashView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PC_Viewer.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450"
-             d:DesignWidth="650">
+             d:DesignHeight="500" d:DesignWidth="650">
 
     <UserControl.Style>
         <Style>
@@ -27,24 +26,29 @@
 
     <Grid Background="#303030">
 
-        <RadioButton Height="40"
-                     Width="40"
-                     HorizontalAlignment="Left"
-                     VerticalAlignment="Top"
-                     Tag="../Assets/back_icon.png"
-                     Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.BackHomeCommand}"
-                     Style="{StaticResource HomeButtonStyle}"
-                     Margin="0,10,0,0" />
-
-        <TextBlock Text="Home  >  This PC"
+        <TextBlock Text="Trash"
                    FontSize="24"
                    FontFamily="/Fonts/OpenSans-Regular.ttf #Open Sans Regular"
                    Foreground="#DDDDDD"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Top"
-                   Margin="50,12,0,0" />
+                   Margin="5,12,0,0" />
 
-        <ItemsControl ItemsSource="{Binding PCSourceCollection}"
+        <Grid Height="40"
+              Width="180"
+              HorizontalAlignment="Right"
+              VerticalAlignment="Top"
+              Margin="0,10,15,0">
+
+            <TextBox x:Name="SearchBox"
+                     Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}"
+                     Style="{StaticResource SearchBoxStyle}" />
+
+            <TextBlock Text="Search"
+                       Style="{StaticResource SearchTextStyle}" />
+        </Grid>
+
+        <ItemsControl ItemsSource="{Binding TrashSourceCollection}"
                       Height="350"
                       Width="650"
                       HorizontalAlignment="Center"
@@ -52,15 +56,15 @@
 
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <RadioButton Content="{Binding PCName}"                                
-                                 Tag="{Binding PCImage}"
+                    <RadioButton Content="{Binding TrashName}"                                 
+                                 Tag="{Binding TrashImage}"
                                  Style="{StaticResource GridButtonStyle}"
-                                 GroupName="PCGroup" />
+                                 GroupName="DesktopGroup" />
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <UniformGrid Columns="4"
+                    <UniformGrid Columns="3"
                                  Rows="3" />
                 </ItemsPanelTemplate>
             </ItemsControl.ItemsPanel>
